--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
+    "config": "1.21.0",
     "css-loader": "0.23.1",
     "del-cli": "0.2.0",
     "file-loader": "0.8.5",
@@ -20,7 +21,9 @@
     "react-micro-container": "1.0.1",
     "rucksack-css": "0.8.6",
     "style-loader": "0.13.1",
+    "superagent": "2.0.0",
     "webpack": "1.13.1",
+    "webpack-config-plugin": "0.5.0",
     "webpack-dev-server": "1.14.1"
   },
   "homepage": "https://github.com/mti-nxt/kao-ui#readme",
@@ -32,8 +35,8 @@
     "url": "git+https://github.com/mti-nxt/kao-ui.git"
   },
   "scripts": {
-    "build": "webpack --progress --colors",
+    "build": "NODE_ENV=production webpack --progress --colors",
     "clean": "del dist",
-    "dev": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000"
+    "dev": "NODE_ENV=localdev webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000"
   }
 }
