--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-loader": "0.8.5",
     "postcss-loader": "0.9.1",
     "react": "15.1.0",
+    "react-cropper": "^0.8.0",
     "react-dom": "15.1.0",
     "react-hot-loader": "1.3.0",
     "react-micro-container": "1.0.1",
