[mod] change default image

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rucksack-css": "0.8.6",
     "style-loader": "0.13.1",
     "superagent": "2.0.0",
+    "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-config-plugin": "0.5.0",
     "webpack-dev-server": "1.14.1"
